<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/drawer_menu_title"/>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nowPlayingMovieListFragment"
            android:title="@string/playingNow"
            android:icon="@drawable/menu_item_arrow"
            app:actionViewClass="android.widget.TextView"/>

        <item
            android:id="@+id/popularMovieListFragment"
            android:title="@string/topRated"
            android:icon="@drawable/menu_item_arrow"/>

        <item
            android:id="@+id/upcomingMovieListFragment"
            android:title="@string/upcoming"
            android:icon="@drawable/menu_item_arrow"/>
    </group>

</menu>