<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_layout_movie_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="@dimen/details_frame_padding"
    xmlns:tools="http://schemas.android.com/tools">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewMovieTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/MovieDetails_TextStyle"
        android:textColor="@color/primary"
        android:textSize="@dimen/details_title_text_size"
        android:layout_marginBottom="@dimen/details_margin_padding"
        tools:text="Movie Title"/>

    <ImageView
        android:id="@+id/imageViewPoster"
        android:layout_width="@dimen/details_poster_width"
        android:layout_height="@dimen/details_poster_height"
        android:layout_gravity="center"
        android:scaleType="fitStart"
        android:layout_marginBottom="@dimen/details_margin_padding"
        tools:src="@drawable/ic_launcher_background" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/primary"
        app:cardCornerRadius="@dimen/cardView_cornerRadius"
        app:cardElevation="@dimen/cardView_default_elevation"
        android:layout_marginBottom="@dimen/details_margin_padding">

        <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/details_margin_padding" android:padding="@dimen/details_margin_padding">

        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/budget"
                style="@style/MovieDetails_TextStyle"
                android:textSize="@dimen/details_general_text_size"
                android:layout_marginEnd="@dimen/details_row_margin"/>
            <TextView
                android:id="@+id/textViewMovieBudget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                style="@style/MovieDetails_TextStyle"
                android:textSize="@dimen/details_general_text_size"
                tools:text="100 000"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/original_language"
                style="@style/MovieDetails_TextStyle"
                android:textSize="@dimen/details_general_text_size"
                android:layout_marginEnd="@dimen/details_row_margin"/>
            <TextView
                android:id="@+id/textViewMovieOriginalLang"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                style="@style/MovieDetails_TextStyle"
                android:textSize="@dimen/details_general_text_size"
                tools:text="en"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/popularity"
                style="@style/MovieDetails_TextStyle"
                android:textSize="@dimen/details_general_text_size"
                android:layout_marginEnd="@dimen/details_row_margin"/>
            <TextView
                android:id="@+id/textViewMoviePopularity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                style="@style/MovieDetails_TextStyle"
                android:textSize="@dimen/details_general_text_size"
                tools:text="Popularity"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/release_date"
                style="@style/MovieDetails_TextStyle"
                android:textSize="@dimen/details_general_text_size"
                android:layout_marginEnd="@dimen/details_row_margin"/>
            <TextView
                android:id="@+id/textViewMovieReleaseDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                style="@style/MovieDetails_TextStyle"
                android:textSize="@dimen/details_general_text_size"
                tools:text="Release date"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/average_vote"
                style="@style/MovieDetails_TextStyle"
                android:textSize="@dimen/details_general_text_size"
                android:layout_marginEnd="@dimen/details_row_margin"/>
            <TextView
                android:id="@+id/textViewAverageVote"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                style="@style/MovieDetails_TextStyle"
                android:textSize="@dimen/details_general_text_size"
                tools:text="5.0"/>
        </TableRow>
    </TableLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/primary"
        app:cardCornerRadius="@dimen/cardView_cornerRadius"
        app:cardElevation="@dimen/cardView_default_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/details_margin_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/overview"
                style="@style/MovieDetails_TextStyle"
                android:textSize="@dimen/details_general_text_size" />

            <TextView
                android:id="@+id/textViewOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                style="@style/MovieDetails_TextStyle"
                android:textSize="@dimen/details_general_text_size"
                tools:text="About the movie..."/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>

</androidx.core.widget.NestedScrollView>